--- a/src/assets/scss/cross_selling/project.scss
+++ b/src/assets/scss/cross_selling/project.scss
@@ -76,6 +76,27 @@ body{
     }
 }
 
+.my-modal{
+    .modal{
+        display: flex !important;
+        align-items: center;
+        justify-content: center;
+        .modal-content{
+            .modal-header{
+                .close {
+                    padding: 4px 20px;
+                    span{
+                        font-size: 2em,
+                    }
+                }
+            }
+            .modal-body{
+                padding: 2px;
+            }
+        }
+    }
+}
+
 .product-detail{
     // overflow: hidden;
     height: 100vh;
@@ -88,12 +109,24 @@ body{
     .first-column{
         height: 100vh;
         background: white;
+
+        .buttons-list{
+            position: relative;
+            width: 100%;
+            height: 40px;
+            text-align: center;
+            span{
+                position: relative !important;
+                padding: 8px !important;
+                margin: 0 2px
+            }
+        }
         
         .boxing{
             z-index: 0;
             position: absolute;
             border-radius: 0.3em;
-            border: 1.3px dashed rgba(255, 0, 0, 0.57);
+            border: 2px dashed rgba(255, 0, 0, 0.57);
             // display: none;
         }
         img{
@@ -205,16 +238,25 @@ body{
             //     flex-direction: row;
             // }
 
-            h2 {
-                padding: 25px 0;
+            h3 {
+                padding: 20px 0 5px;
                 text-transform: capitalize;
             }
         }
 
         .product-type-b{
+            cursor: pointer;
 
+            .modal-event{
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                z-index: 2;
+            }
             .card-text{
-                z-index: 1;
+                z-index: 3;
                 position: absolute;
                 top: 0;
                 left: 0;
