--- a/src/assets/scss/cross_selling/project.scss
+++ b/src/assets/scss/cross_selling/project.scss
@@ -351,3 +351,100 @@ body{
         
     }
 }
+
+
+
+// LOCAL MODAL
+.local-modal{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 0.71em;
+    .overlay{
+        bottom:0;
+        left:0;
+        right: 0;
+        top: 0;
+        background: #000000;
+        height: 100vh;
+    }
+    .modal-content{
+        border-radius: 0;
+        .mt-5{
+            margin-top: 10px !important;
+        }
+        img{
+            width: 50%;
+            height: auto;
+        }
+        background:white;
+        width: 40%;
+        // height: 200px;
+        .header-modal{
+            background: #f93449;
+        }
+
+        .body-modal{
+            .item{
+                height: 128px;
+                img{
+                    max-height: 100px;
+                    max-width: 100px;
+                }
+            }
+        }
+    }
+    .footer-modal{
+        padding: 10px;
+        .btn{
+            background: #f93449;
+        }
+    }
+}
+
+// #pdpModalAddToCart{
+//     width: 95% !important;
+//     max-width: 100% !important;
+// }
+
+// #pdpModalAddToCart .body-modal{
+//     height: 500px !important;
+// }
+
+#ContainerImage{
+    background: white;
+    .product-image{
+         width: 160px;
+        padding: 5px;
+        float: left;
+
+        img{
+            width: 100%;
+        }
+
+        .content{
+            background: white;
+            height: 62px;
+            padding: 0 5px;
+            p {
+                margin: 0;
+            }
+            .brand{
+                font-size: 12px;
+                line-height: 1.2;
+                color: #777;
+                font-weight: 400;
+                text-transform: uppercase;
+                padding: 6px 0 0;
+            }
+            .productName{
+                text-transform: capitalize;
+                line-height: 1.2;
+                color: #444;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                font-size: 14px;
+                padding: 5px 0 0;
+            }
+        }
+    }
+}
+
