ADD GENDER SeARCH

--- a/src/assets/scss/cross_selling/project.scss
+++ b/src/assets/scss/cross_selling/project.scss
@@ -498,6 +498,12 @@ body{
     }
 }
 
+.division-options{
+    button{
+        font-family: monospace;
+    }
+}
+
 .my-modal-catalog{
     input {
         font-family: monospace;
